# hurtig

./: CHANGELOG.md  hie.yaml  hurtig.cabal  readme.md  shell.nix
.github/workflows/: haskell-ci.yml
app/: Main.hs
data/: success-output.txt
npins/: sources.json
smoke-tests/: quick-failed-test.in  quick-failed-test.out  quick-simple-success.out  smoke.yaml  successful-test-run.in  successful-test-run.out
src/: Hurtig.hs
src/Hurtig/: Foo.hs  QuickLog.hs  QuickParser.hs  TestTree.hs
test/Hurtig/: FooSpec.hs  QuickParserSpec.hs  TestTreeSpec.hs
